--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-libdist-zilla-pluginbundle-author-heeb-perl (1.0-1) UNRELEASED; urgency=low
+libdist-zilla-pluginbundle-author-heeb-perl (1.0-1) unstable; urgency=low
 
+  * local package used for internal development
   * Initial Release.
 
- -- Elmar S. Heeb <elmar@heebs.ch>  Fri, 27 Mar 2015 16:04:40 +0100
+ -- Elmar S. Heeb <elmar@heebs.ch>  Mon, 30 Mar 2015 15:19:41 +0200
