--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libdist-zilla-pluginbundle-author-heeb-perl (1.0.2-1) UNRELEASED; urgency=medium
+
+  * (to be filled in)
+
+ -- Elmar Heeb <elmar@uto.heebs.ch>  Fri, 24 Apr 2015 16:16:00 +0200
+
 libdist-zilla-pluginbundle-author-heeb-perl (1.0.1-1) unstable; urgency=medium
 
   * fixed dependencies
